fixed scrollbar in firefox

--- a/source/js/style.scss
+++ b/source/js/style.scss
@@ -114,6 +114,7 @@
   &::-webkit-scrollbar { //hide scrolbars but keep behavior
     display: none;
   }
+  scrollbar-width: none;//to hide scrolbar also in firefox
 
 }
 .weatherData{
